# log_cleaner

./: .gitignore  README.md  pytest.ini  setup.cfg
.github/workflows/: python-app.yml
src/logcleaner/: __init__.py  __main__.py  cleaner.py  console.py  exit.py  file_manager.py
tests/: conftest.py  test_cleaner.py  test_console.py  test_exit.py  test_file_manager.py
