[metadata]
name = log-cleaner
version = 1.1.0
author = Olumide Awodeji
author_email = olumide.awodeji@hotmail.com
description = A tool to clean logging statements from code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cypher-o/log_cleaner
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    log-cleaner = logcleaner.__main__:main